# webnative

./: .gitignore  LICENSE  eslint.config.mjs  package-lock.json  package.json  readme.md  tsconfig.json
core/: linux.cpp
docs/: devlog.md
src/: index.ts
src/commands/: build.ts  dev.ts  index.ts  init.ts
src/core/linux/: CMakeLists.txt  linux.cpp
src/core/linux/include/: api.hpp  config.hpp  globals.hpp  ipc.hpp  linux.hpp  node.hpp  webkit.hpp
src/core/linux/self-contained/: CMakeLists.txt  linux.cpp
src/core/linux/src/: api.cpp  config.cpp  globals.cpp  ipc.cpp  linux.cpp  node.cpp  webkit.cpp
src/core/others/: webview2_.cpp
src/core/windows/: api.cpp  api.hpp  config.cpp  config.hpp  globals.cpp  globals.hpp  ipc.cpp  ipc.hpp  node.cpp  node.hpp  packages.config  string.cpp  string.hpp  structure.json  webview2.cpp  webview2.hpp  windows.cpp  windows.hpp  windows.slnx  windows.vcxproj  windows.vcxproj.filters
src/utils/: appimagetool.ts  backend.ts  cache-path.ts  cleanup.ts  config.ts  docker.ts  download.ts  exception.ts  exec.ts  makensis.ts  node.ts  package-path.ts  zip.ts
template/: webnative.json
template/app/public/: index.css  index.html
template/js/: webpack.config.js
template/js/app/: index.js
template/js/app/api/: android.js  index.d.ts  ios.js  linux.js  macos.js  windows.js
template/js/app/backend/: index.js
template/js/app/public/: index.css  index.html  index.js
template/ts/: tsconfig.json  webnative.json  webpack.config.js
template/ts/app/: index.ts
template/ts/app/api/: android.ts  linux.ts  windows.ts
template/ts/app/backend/: index.ts
template/ts/app/backend/api/: index.d.ts  linux.ts  windows.ts
template/ts/app/public/: index.css  index.html
